5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1649_2446.log
== TEST (2019-04-09 18:14:15) 
-- CODE:
senha= float(input("digite uma senha de 6 digitos:"))
calculo= (1000000/100000)+(1000000%100000%10000%1000)+(1000000%100000%10000%1000%100%10)
print(calculo)
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:16:08) 
-- CODE:
senha= float(input("digite uma senha de 6 digitos:"))
n1=1000000/100000
n2=
n3=
n4=
n5=
n6=
print(n1)
-- ERROR:
File "XXXX", line 3
    n2=
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:16:20) 
-- CODE:
senha= float(input("digite uma senha de 6 digitos:"))
n1=1000000/100000

print(n1)
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:16:34) 
-- CODE:
senha= float(input("digite uma senha de 6 digitos:"))
n1=1000000/1000000

print(n1)
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:16:51) 
-- CODE:
senha= int(input("digite uma senha de 6 digitos:"))
n1=1000000/1000000

print(n1)
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:17:53) 
-- CODE:
senha= int(input("digite uma senha de 6 digitos:"))
n1=1000000/1000000
n2=1000000%1000000/100000
print(n1)
print(n2)
-- OUTPUT:
1.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:18:22) 
-- CODE:
senha= int(input("digite uma senha de 6 digitos:"))
n1=1000000/1000000
n2=1000000%100000
print(n1)
print(n2)
-- OUTPUT:
1.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:18:32) 
-- CODE:
senha= int(input("digite uma senha de 6 digitos:"))
n1=1000000/1000000
n2=1000000/100000
print(n1)
print(n2)
-- OUTPUT:
1.0
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:18:47) 
-- CODE:
senha= int(input("digite uma senha de 6 digitos:"))
n1=1000000/1000000
n2=100000/100000
print(n1)
print(n2)
-- OUTPUT:
1.0
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:19:55) 
-- CODE:
s= int(input("digite uma senha de 6 digitos:"))
n1=s/1000000
n2=s%1000000/100000
print(n1)
print(n2)
-- OUTPUT:
0.087612
0.87612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:20:32) 
-- CODE:
s= int(input("digite uma senha de 6 digitos:"))
n1=s//100000
n2=s%100000/10000
print(n1)
print(n2)
-- OUTPUT:
0
8.7612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:20:43) 
-- CODE:
s= int(input("digite uma senha de 6 digitos:"))
n1=s//100000
n2=s%100000//10000
print(n1)
print(n2)
-- OUTPUT:
0
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:23:04) 
-- CODE:
s= int(input("digite uma senha de 6 digitos:"))
n1=s//100000
n2=s%100000//10000
n3=s%100000%10000//1000
n4=s%100000%10000%1000//100
n5=s%100000%10000%1000%100//10
n6=s%100000%10000%1000%100%10
print(n1)
print(n2)
print(n3)
print(n4)
print(n5)
print(n6)
-- OUTPUT:
0
8
7
6
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:38:54) 
-- CODE:
s= int(input("digite uma senha de 6 digitos:"))
n1=s//100000
n2=s%100000//10000
n3=s%100000%10000//1000
n4=s%100000%10000%1000//100
n5=s%100000%10000%1000%100//10
n6=s%100000%10000%1000%100%10
c= n2+n4+n6
v= n1+n3+n5
if(c//v=!0)
	mensagem= "acesso liberado"
else(c//v==0)
	mensagem= "acesso negado"
-- ERROR:
File "XXXX", line 10
    if(c//v=!0)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:39:25) 
-- CODE:
s= int(input("digite uma senha de 6 digitos:"))
n1=s//100000
n2=s%100000//10000
n3=s%100000%10000//1000
n4=s%100000%10000%1000//100
n5=s%100000%10000%1000%100//10
n6=s%100000%10000%1000%100%10
c= n2+n4+n6
v= n1+n3+n5
if(c//v=!):
	mensagem= "acesso liberado"
else(c//v==0):
	mensagem= "acesso negado"
-- ERROR:
File "XXXX", line 10
    if(c//v=!):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:39:36) 
-- CODE:
s= int(input("digite uma senha de 6 digitos:"))
n1=s//100000
n2=s%100000//10000
n3=s%100000%10000//1000
n4=s%100000%10000%1000//100
n5=s%100000%10000%1000%100//10
n6=s%100000%10000%1000%100%10
c= n2+n4+n6
v= n1+n3+n5
if(c//v=!0):
	mensagem= "acesso liberado"
else(c//v==0):
	mensagem= "acesso negado"
-- ERROR:
File "XXXX", line 10
    if(c//v=!0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:40:10) 
-- CODE:
s= int(input("digite uma senha de 6 digitos:"))
n1=s//100000
n2=s%100000//10000
n3=s%100000%10000//1000
n4=s%100000%10000%1000//100
n5=s%100000%10000%1000%100//10
n6=s%100000%10000%1000%100%10
c= n2+n4+n6
v= n1+n3+n5
if(c//v=/0):
	mensagem= "acesso liberado"
else(c//v==0):
	mensagem= "acesso negado"
-- ERROR:
File "XXXX", line 10
    if(c//v=/0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:40:55) 
-- CODE:
s= int(input("digite uma senha de 6 digitos:"))
n1=s//100000
n2=s%100000//10000
n3=s%100000%10000//1000
n4=s%100000%10000%1000//100
n5=s%100000%10000%1000%100//10
n6=s%100000%10000%1000%100%10
c= n2+n4+n6
v= n1+n3+n5
if(c//v!=0):
	mensagem= "acesso liberado"
else(c//v==0):
	mensagem= "acesso negado"
-- ERROR:
File "XXXX", line 12
    else(c//v==0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:43:23) 
-- CODE:
s= int(input("digite uma senha de 6 digitos:"))
n1=s//100000
n2=s%100000//10000
n3=s%100000%10000//1000
n4=s%100000%10000%1000//100
n5=s%100000%10000%1000%100//10
n6=s%100000%10000%1000%100%10
c= n2+n4+n6
v= n1+n3+n5
if(c//v!=0):
	print("acesso liberado")
else(c//v==0):
	print("acesso negado")
-- ERROR:
File "XXXX", line 12
    else(c//v==0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:43:46) 
-- CODE:
s= int(input("digite uma senha de 6 digitos:"))
n1=s//100000
n2=s%100000//10000
n3=s%100000%10000//1000
n4=s%100000%10000%1000//100
n5=s%100000%10000%1000%100//10
n6=s%100000%10000%1000%100%10
c= n2+n4+n6
v= n1+n3+n5
if(c//v)=0:
	print("acesso liberado")
else(c//v==0):
	print("acesso negado")
-- ERROR:
File "XXXX", line 10
    if(c//v)=0:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:43:55) 
-- CODE:
s= int(input("digite uma senha de 6 digitos:"))
n1=s//100000
n2=s%100000//10000
n3=s%100000%10000//1000
n4=s%100000%10000%1000//100
n5=s%100000%10000%1000%100//10
n6=s%100000%10000%1000%100%10
c= n2+n4+n6
v= n1+n3+n5
if(c//v)!0:
	print("acesso liberado")
else(c//v==0):
	print("acesso negado")
-- ERROR:
File "XXXX", line 10
    if(c//v)!0:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:44:20) 
-- CODE:
s= int(input("digite uma senha de 6 digitos:"))
n1=s//100000
n2=s%100000//10000
n3=s%100000%10000//1000
n4=s%100000%10000%1000//100
n5=s%100000%10000%1000%100//10
n6=s%100000%10000%1000%100%10
c= n2+n4+n6
v= n1+n3+n5
if(c//v)!=0:
	print("acesso liberado")
else(c//v)==0:
	print("acesso negado")
-- ERROR:
File "XXXX", line 12
    else(c//v)==0:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:52:49) 
-- CODE:
s= int(input("digite uma senha de 6 digitos:"))
n1=s//100000
n2=s%100000//10000
n3=s%100000%10000//1000
n4=s%100000%10000%1000//100
n5=s%100000%10000%1000%100//10
n6=s%100000%10000%1000%100%10
c= n2+n4+n6
v= n1+n3+n5
if(c%v)==0:
	print("acesso liberado")
else:
	print("acesso negado")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:52:58) 
-- CODE:
s= int(input("digite uma senha de 6 digitos:"))
n1=s//100000
n2=s%100000//10000
n3=s%100000%10000//1000
n4=s%100000%10000%1000//100
n5=s%100000%10000%1000%100//10
n6=s%100000%10000%1000%100%10
c= n2+n4+n6
v= n1+n3+n5
if(c%v)==0:
	print("acesso liberado")
else:
	print("acesso negado")
-- EXECUTION TIME:
0.179016
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso negado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:53:21) 
-- CODE:
s= int(input("digite uma senha de 6 digitos:"))
n1=s//100000
n2=s%100000//10000
n3=s%100000%10000//1000
n4=s%100000%10000%1000//100
n5=s%100000%10000%1000%100//10
n6=s%100000%10000%1000%100%10
c= n2+n4+n6
v= n1+n3+n5
if(c%v)==0:
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:53:26) 
-- CODE:
s= int(input("digite uma senha de 6 digitos:"))
n1=s//100000
n2=s%100000//10000
n3=s%100000%10000//1000
n4=s%100000%10000%1000//100
n5=s%100000%10000%1000%100//10
n6=s%100000%10000%1000%100%10
c= n2+n4+n6
v= n1+n3+n5
if(c%v)==0:
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.1449
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:57:57) 
-- CODE:
s= int(input("digite uma senha de 6 digitos:"))
n1=s//100000
n2=s%100000//10000
n3=s%100000%10000//1000
n4=s%100000%10000%1000//100
n5=s%100000%10000%1000%100//10
n6=s%100000%10000%1000%100%10
c= n2+n4+n6
v= n1+n3+n5
if(c%v)==0:
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
